Intermediate commit: Content negotiation complete, many compiler warnings fixed